--- a/lang/src/en/messages.json
+++ b/lang/src/en/messages.json
@@ -29,7 +29,9 @@
         "GearEffectApplied": "Applied as effect:",
         "GearEffectReceived": "Received gear effect:",
         "Effect": "Effect",
-        "OutOfStock": "Source was out of stock"
+        "OutOfStock": "Source was out of stock",
+        "StatusIntensified": "Status intensified:",
+        "StatusApplied": "Status applied:"
       }
     },
     "MessageHeaders": {
