--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -74,6 +74,8 @@
       "NoTargetsSavedDamage": "No targets selected for saved damage",
       "ActionCardInvalid": "Invalid action card",
       "ActionCardEffectFailed": "Failed to apply action card effect",
+      "FailedToCreateActionCard": "Failed to create action card from '{itemName}'",
+      "FailedToCreateStatusActionCard": "Failed to create damage action card from status '{statusName}'",
       "SaveEffectImageFailed": "Failed to save effect image.",
       "SaveItemImageFailed": "Failed to save item image.",
       "SaveItemFailed": "Failed to save item. See console for details.",
