--- a/lang/src/en/actor.json
+++ b/lang/src/en/actor.json
@@ -63,7 +63,14 @@
         "CreateActionCard": "Create Action Card"
       },
       "ActionCards": {
-        "CreatedActionCard": "Created action card '{actionCardName}'"
+        "CreatedActionCard": "Created action card '{actionCardName}'",
+        "DropItemHere": "Drop features, combat powers, gear, or status effects here to create action cards",
+        "DropHelpText": "Automatically creates action cards with embedded items ready to use",
+        "GeneratedName": "{itemName} Action",
+        "StatusGeneratedName": "{statusName} Damage",
+        "CreatedFromItem": "Created action card '{actionCardName}' from '{itemName}'",
+        "CreatedStatusActionCard": "Created damage action card '{actionCardName}' from status '{statusName}'",
+        "StatusDamageDescription": "Direct damage application using {statusName} energy"
       }
     }
   }
