feat: add AC effects handling and update related UI components. Closes AC Mode for Character Effects #95

--- a/lang/src/en/forms.json
+++ b/lang/src/en/forms.json
@@ -6,6 +6,7 @@
         "DamageTargets": "This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets."
       },
       "Sections": {
+        "ACEffects": "AC Effects",
         "ActiveGear": "Active Gear",
         "Adjustments": "Adjustments",
         "Adv": "Adv",
