--- a/lang/en.json
+++ b/lang/en.json
@@ -501,6 +501,7 @@
         "DamageTargets": "This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets."
       },
       "Sections": {
+        "ACEffects": "AC Effects",
         "ActiveGear": "Active Gear",
         "Adjustments": "Adjustments",
         "Adv": "Adv",
@@ -645,6 +646,7 @@
     },
     "Messages": {
       "Sections": {
+        "AC": "AC",
         "ACCheck": "AC Check",
         "Add": "add",
         "Adv": "adv",
