--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -73,6 +73,7 @@
       "Tabs": {
         "Description": "Description",
         "Attributes": "Attributes",
+        "Config": "Config",
         "Effects": "Effects",
         "CharacterEffects": "Character Effects",
         "Prerequisites": "Prerequisites",
@@ -144,7 +145,41 @@
           "label": "Advance Initiative",
           "hint": "When enabled, advances initiative after execution. Can only be used on your turn."
         },
-        "AdvanceInitiativeTurnError": "You can only use this action card on your turn when 'Advance Initiative' is enabled."
+        "AttemptInventoryReduction": {
+          "label": "Reduce Inventory",
+          "hint": "When enabled, reduces inventory quantities when transferring gear effects."
+        },
+        "AdvanceInitiativeTurnError": "You can only use this action card on your turn when 'Advance Initiative' is enabled.",
+        "Repetitions": {
+          "label": "Repetitions",
+          "hint": "Roll formula for number of repetitions (e.g. '3', '1d4', '2d6+1')"
+        },
+        "RepeatToHit": {
+          "label": "Repeat to Hit",
+          "hint": "Re-roll the embedded item for each repetition (attack chains only)"
+        },
+        "DamageApplication": {
+          "label": "Damage Per Success",
+          "hint": "Apply damage on every repetition instead of just the first success"
+        },
+        "StatusPerSuccess": {
+          "label": "Status Per Success",
+          "hint": "Apply/intensify status effects on every repetition"
+        },
+        "TimingOverride": {
+          "label": "Timing Override (seconds)",
+          "hint": "Custom delay between repetitions. <strong>0 uses system default</strong>"
+        },
+        "CostOnRepetition": {
+          "label": "Cost Per Repetition", 
+          "hint": "When enabled, applies resource costs (power/gear) on each repetition instead of just the first"
+        },
+        "InsufficientPowerError": "Insufficient power for {itemName}: requires {required}, available {available}",
+        "InsufficientQuantityError": "Insufficient quantity for {itemName}: requires {required}, available {available}",
+        "Config": {
+          "RepetitionsHeader": "Repetition Settings",
+          "BehaviorHeader": "Repetition Behavior"
+        }
       }
     }
   }
