Updated translation strings with new methodology.

--- a/lang/src/en/chat.json
+++ b/lang/src/en/chat.json
@@ -13,6 +13,29 @@
         "DiscardAll": "Discard All",
         "MultipleEffectsPending": "Multiple Effects Pending",
         "TargetUnavailable": "Target no longer available"
+      },
+      "PlayerActionApproval": {
+        "Title": "GM Approval Required",
+        "Player": "Player",
+        "Actor": "Actor",
+        "ActionCard": "Action Card",
+        "Targets": "Targets",
+        "NotOwned": "Not Owned",
+        "RollFormula": "Roll Formula",
+        "GMDecision": "GM Decision",
+        "Approve": "Approve",
+        "Deny": "Deny",
+        "Approved": "Approved",
+        "Denied": "Denied",
+        "ProcessedBy": "by",
+        "RequestSent": "Approval request sent to GM",
+        "ResultApproved": "Your action '{actionCard}' has been approved by {gm}",
+        "ResultDenied": "Your action '{actionCard}' has been denied by {gm}",
+        "Repetitions": "Repetitons",
+        "ToHit": "To Hit",
+        "Damage": "Damage",
+        "Status": "Status",
+        "Cost": "Cost"
       }
     }
   }
