--- a/lang/src/en/errors.json
+++ b/lang/src/en/errors.json
@@ -34,7 +34,7 @@
       "ActionCardItemTypes": "Action cards can only embed items of type: {supported}. Cannot add {type}.",
       "ActionCardEffectTypes": "Action cards can only embed effects of type: {supported}. Cannot add {type}.",
       "ActionCardStatusTypes": "Action cards can only embed status effects. Cannot add {type}.",
-      "TransformationItemTypes": "Transformations can only embed combat powers.",
+      "TransformationItemTypes": "Transformations can only embed combat powers and action cards.",
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
       "MissingAbility": "Missing ability",
@@ -104,6 +104,9 @@
       "CharacterEffectDeletionFailed": "Failed to delete character effect",
       "CharacterEffectsUpdateFailed": "Failed to update character effects",
       "CombatPowerRemovalFailed": "Failed to remove combat power",
+      "ActionCardRemovalFailed": "Failed to remove action card",
+      "ActionCardEditFailed": "Failed to edit action card",
+      "FailedToAddItemToTransformation": "Failed to add {itemType} '{itemName}' to transformation '{transformationName}'",
       "ContextEnrichmentError": "Failed to enrich context",
       "DocumentCreateError": "Failed to create document",
       "DocumentDeleteError": "Failed to delete document",
