--- a/lang/en.json
+++ b/lang/en.json
@@ -253,6 +253,7 @@
         "CharacterEffects": "Character Effects",
         "Prerequisites": "Prerequisites",
         "CombatPowers": "Combat Powers",
+        "ActionCards": "Action Cards",
         "EmbeddedItems": "Embedded Items"
       },
       "Transformation": {
@@ -263,9 +264,13 @@
         "EmbeddedPowers": "Combat Powers",
         "NoPowers": "No combat powers added yet.",
         "DropPowerHere": "Drop a combat power here to add it to this transformation.",
+        "EmbeddedActionCards": "Action Cards",
+        "NoActionCards": "No action cards added yet.",
+        "DropActionCardHere": "Drop an action card here to add it to this transformation.",
+        "ActionCardNotes": "Action cards from transformations override the character's action cards while transformed.",
         "ReadOnlyNote": "Note: Embedded combat powers open in read-only mode. To edit a power, modify the original item in the actor's inventory.",
-        "DragToExtract": "Drag to extract this combat power as a new item",
-        "DragNote": "Tip: Drag combat powers to actors, compendiums, or item tabs to create copies.",
+        "DragToExtract": "Drag to extract this item as a new item",
+        "DragNote": "Tip: Drag items to actors, compendiums, or item tabs to create copies.",
         "TokenImage": "Token Image",
         "TokenImageHint": "Image to use for the token when this transformation is applied"
       },
@@ -328,6 +333,7 @@
         "Statuses": "Statuses"
       },
       "CombatPowers": {
+        "TransformationCombatPowers": "Combat powers are provided by active transformation",
         "Transformed": "Transformed",
         "TransformedLocked": "Combat powers are provided by active transformation - cannot create new powers while transformed",
         "TransformationPower": "Transformation Power"
@@ -348,7 +354,11 @@
         "StatusGeneratedName": "{statusName} Damage",
         "CreatedFromItem": "Created action card '{actionCardName}' from '{itemName}'",
         "CreatedStatusActionCard": "Created damage action card '{actionCardName}' from status '{statusName}'",
-        "StatusDamageDescription": "Direct damage application using {statusName} energy"
+        "StatusDamageDescription": "Direct damage application using {statusName} energy",
+        "TransformationActionCards": "Action cards are provided by active transformation",
+        "TransformationActionCard": "Action card from active transformation",
+        "Transformed": "Transformed",
+        "TransformedLocked": "Action cards are provided by active transformation - cannot create or modify while transformed"
       },
       "Sections": {
         "Effects": "Effects"
@@ -413,7 +423,7 @@
       "ActionCardItemTypes": "Action cards can only embed items of type: {supported}. Cannot add {type}.",
       "ActionCardEffectTypes": "Action cards can only embed effects of type: {supported}. Cannot add {type}.",
       "ActionCardStatusTypes": "Action cards can only embed status effects. Cannot add {type}.",
-      "TransformationItemTypes": "Transformations can only embed combat powers.",
+      "TransformationItemTypes": "Transformations can only embed combat powers and action cards.",
       "InvalidWeight": "Weight must be a valid number",
       "InvalidCost": "Cost must be a valid number",
       "MissingAbility": "Missing ability",
@@ -483,6 +493,9 @@
       "CharacterEffectDeletionFailed": "Failed to delete character effect",
       "CharacterEffectsUpdateFailed": "Failed to update character effects",
       "CombatPowerRemovalFailed": "Failed to remove combat power",
+      "ActionCardRemovalFailed": "Failed to remove action card",
+      "ActionCardEditFailed": "Failed to edit action card",
+      "FailedToAddItemToTransformation": "Failed to add {itemType} '{itemName}' to transformation '{transformationName}'",
       "ContextEnrichmentError": "Failed to enrich context",
       "DocumentCreateError": "Failed to create document",
       "DocumentDeleteError": "Failed to delete document",
@@ -599,6 +612,7 @@
         "Size": "Size",
         "TransformationAttributes": "Transformation Attributes",
         "CombatPowers": "Combat Powers",
+        "ActionCards": "Action Cards",
         "DropCombatPowers": "Drop combat powers here"
       },
       "Buttons": {
